# timelapse-py

./: .gitignore  pyproject.toml
timelapse/: copy_files_for_video.py  make_video.py  save_photo.py  utils.py
timelapse/scripts/: get_image.py  hello.py  make_video.py  save_photo_by_time.py
